--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./src/App.css" />
+  <link rel="stylesheet" href="./src/index.css" />
+  <link rel="stylesheet" href="./src/components/about/aobut.css" />
+  <link rel="stylesheet" href="./src/components/header/header.css" />
+  <link rel="stylesheet" href="./src/components/shop/shop.css" />
+  <link rel="stylesheet" href="./src/components/shoppingcart/ShoppingCart.css" />
+  <!-- <link rel="stylesheet" href="./src/components/" /> -->
+
   <title>Vite + React</title>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+
 </body>
 
 </html>
